--- a/index.html
+++ b/index.html
@@ -1,148 +1,200 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Specialzyy Hub</title>
-  <style>
-    body {
-      background: #121212;
-      color: #e0e0e0;
-      font-family: Arial, sans-serif;
-      margin: 20px;
-    }
-    h1 {
-      text-align: center;
-      font-size: 2rem;
-      color: #7f53ff;
-      margin-bottom: 30px;
-    }
-    h2 {
-      color: #7f53ff;
-      margin-top: 40px;
-      border-bottom: 2px solid #7f53ff;
-      padding-bottom: 6px;
-    }
-    .tool-list {
-      max-width: 600px;
-      margin: 0 auto 40px;
-    }
-    .tool-item {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 12px 10px;
-      border-bottom: 1px solid #333;
-    }
-    .tool-item:last-child {
-      border-bottom: none;
-    }
-    .btn {
-      background: #7f53ff;
-      border: none;
-      padding: 8px 16px;
-      color: white;
-      border-radius: 6px;
-      cursor: pointer;
-      font-weight: 600;
-      transition: background 0.3s ease;
-    }
-    .btn:hover {
-      background: #5c3ea6;
-    }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Coolzyy / Specialzyy Hub</title>
+<style>
+  body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background: #b22222; /* default background for Coolzyy */
+    color: #f0f0f0;
+  }
+  header {
+    background-color: #8b0000;
+    color: #fff;
+    padding: 15px;
+    text-align: center;
+    font-size: 1.8rem;
+    font-weight: bold;
+  }
+  main {
+    max-width: 600px;
+    margin: 20px auto;
+    padding: 20px;
+    background: #8b0000;
+    border-radius: 12px;
+    box-shadow: 0 6px 15px rgba(0,0,0,0.5);
+  }
+  section {
+    margin-bottom: 30px;
+  }
+  h2 {
+    border-bottom: 2px solid #ff6347;
+    padding-bottom: 8px;
+    margin-bottom: 18px;
+    color: #ffe4e1;
+  }
+  ul {
+    list-style: none;
+    padding: 0;
+  }
+  li {
+    margin-bottom: 14px;
+  }
+  a {
+    color: #ffb6c1;
+    text-decoration: none;
+    font-weight: bold;
+  }
+  a:hover {
+    color: #ffa07a;
+    text-decoration: underline;
+  }
+  footer {
+    text-align: center;
+    padding: 10px;
+    font-size: 0.85rem;
+    color: #f0e68c;
+  }
+  /* Specialzyy Hub style */
+  #specialzyy {
+    display: none;
+    background: #121212;
+    color: #e0e0e0;
+    padding: 20px;
+  }
+  #specialzyy h1 {
+    text-align: center;
+    font-size: 2rem;
+    color: #7f53ff;
+    margin-bottom: 30px;
+  }
+  #specialzyy h2 {
+    color: #7f53ff;
+    margin-top: 40px;
+    border-bottom: 2px solid #7f53ff;
+    padding-bottom: 6px;
+  }
+  .tool-list {
+    max-width: 600px;
+    margin: 0 auto 40px;
+  }
+  .tool-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 12px 10px;
+    border-bottom: 1px solid #333;
+  }
+  .btn {
+    background: #7f53ff;
+    border: none;
+    padding: 8px 16px;
+    color: white;
+    border-radius: 6px;
+    cursor: pointer;
+    font-weight: 600;
+  }
+  .btn:hover {
+    background: #5c3ea6;
+  }
+  /* Toggle Button */
+  .switch-btn {
+    display: block;
+    margin: 20px auto;
+    padding: 8px 16px;
+    background: #444;
+    color: #fff;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-weight: bold;
+  }
+  .switch-btn:hover {
+    background: #666;
+  }
+</style>
 </head>
 <body>
 
-<h1>Specialzyy Hub</h1>
+<!-- Coolzyy Section -->
+<div id="coolzyy">
+<header>Coolzyy</header>
+<main>
+  <section>
+    <h2>DNS Anti-Revoke</h2>
+    <ul>
+      <li><a href="https://direct-link.net/1375386/8TmNzhvX9Fwu" target="_blank">Coolzyy New Updates DNS</a></li>
+      <li><a href="https://www.mediafire.com/file/4l9jwf4i2h03qfv/Coolzyy_DNS_For_Sideloading.mobileconfig/file" target="_blank">Coolzyy Old DNS (.mobileconfig)</a></li>
+    </ul>
+  </section>
 
-<h2>Signers (ESign)</h2>
-<div class="tool-list">
-  <div class="tool-item">
-    <span>Beijing Esensoft Co., Ltd</span>
-    <button class="btn" onclick="window.open('https://tinyurl.com/3x96trkc','_blank')">Install</button>
-  </div>
-  <div class="tool-item">
-    <span>NREH ESTATE INFORMATION TECHNOLOGY Co., Ltd</span>
-    <button class="btn" onclick="window.open('https://tinyurl.com/y9j5ujv8','_blank')">Install</button>
-  </div>
-  <div class="tool-item">
-    <span>China Railway Eryuan Engineering Group</span>
-    <button class="btn" onclick="window.open('https://tinyurl.com/6f6aesdw','_blank')">Install</button>
-  </div>
-  <div class="tool-item">
-    <span>Dtt Technology</span>
-    <button class="btn" onclick="window.open('https://tinyurl.com/3fpdcf6b','_blank')">Install</button>
-  </div>
-  <div class="tool-item">
-    <span>TCL Household Appliance Marketing Co., Ltd</span>
-    <button class="btn" onclick="window.open('https://tinyurl.com/4fz7uajp','_blank')">Install</button>
-  </div>
-  <div class="tool-item">
-    <span>Wuling Power Corporation</span>
-    <button class="btn" onclick="window.open('https://tinyurl.com/yc6pjsjf','_blank')">Install</button>
-  </div>
-  <div class="tool-item">
-    <span>HDFC Bank Limited</span>
-    <button class="btn" onclick="window.open('https://api.khoindvn.eu.org/SYKaO8','_blank')">Install</button>
-  </div>
-  <div class="tool-item">
-    <span>Vietnam Electricity</span>
-    <button class="btn" onclick="window.open('https://api.khoindvn.eu.org/q26Etj','_blank')">Install</button>
-  </div>
-  <div class="tool-item">
-    <span>Kotak Mahindra Bank Ltd</span>
-    <button class="btn" onclick="window.open('https://api.khoindvn.eu.org/6BFC8C','_blank')">Install</button>
-  </div>
-  <div class="tool-item">
-    <span>China Continent Property & Casualty Insurance Co., Ltd</span>
-    <button class="btn" onclick="window.open('https://api.khoindvn.eu.org/y8PvzI','_blank')">Install</button>
-  </div>
-  <div class="tool-item">
-    <span>GAC TOYOTA MOTOR CO., LTD</span>
-    <button class="btn" onclick="window.open('https://api.khoindvn.eu.org/XYymqT','_blank')">Install</button>
-  </div>
-  <div class="tool-item">
-    <span>Sunshine</span>
-    <button class="btn" onclick="window.open('https://api.khoindvn.eu.org/1QbTEI','_blank')">Install</button>
-  </div>
-  <div class="tool-item">
-    <span>Sunshine V1</span>
-    <button class="btn" onclick="window.open('https://api.khoindvn.eu.org/qIELXJ','_blank')">Install</button>
-  </div>
-  <div class="tool-item">
-    <span>Sunshine V2</span>
-    <button class="btn" onclick="window.open('https://api.khoindvn.eu.org/o523rG','_blank')">Install</button>
+  <section>
+    <h2>ESign Downloads</h2>
+    <ul>
+      <li><a href="https://loadly.io/NRqDTAah" target="_blank">ESign Chiba</a></li>
+      <li><a href="https://loadly.io/0nYrexO6" target="_blank">ESign BMW</a></li>
+      <li><a href="https://loadly.io/vnjes8ios" target="_blank">ESign Vietnam Joint</a></li>
+      <li><a href="https://loadly.io/sCxKfNji" target="_blank">ESign Viettel</a></li>
+      <li><a href="https://loadly.io/8FnyqEjs" target="_blank">ESign Beijing</a></li>
+      <li><a href="https://loadly.io/ZQgRwTtA" target="_blank">ESign NREH Estate</a></li>
+      <li><a href="https://loadly.io/TM5Ye1O1" target="_blank">ESign China Railway</a></li>
+      <li><a href="https://loadly.io/Rod6cWdW" target="_blank">ESign EEO Education</a></li>
+      <li><a href="https://loadly.io/pokXH5G4" target="_blank">ESign TCL</a></li>
+      <li><a href="https://loadly.io/zBXxhRoc" target="_blank">ESign Wuling Power</a></li>
+      <li><a href="https://loadly.io/55ZWv8OZ" target="_blank">ESign Gac Toyota</a></li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Cert</h2>
+    <ul>
+      <li><a href="https://github.com/esigncert/khoindvn/raw/refs/heads/main/document/DNS/Certs-Khoindvn.zip" target="_blank">Certificates - Certs-Khoindvn.zip</a></li>
+    </ul>
+  </section>
+</main>
+<footer>© 2025 Coolzyy</footer>
+</div>
+
+<!-- Specialzyy Section -->
+<div id="specialzyy">
+  <h1>Specialzyy Hub</h1>
+
+  <h2>Signers (ESign)</h2>
+  <div class="tool-list">
+    <div class="tool-item">
+      <span>Beijing Esensoft Co., Ltd</span>
+      <button class="btn" onclick="window.open('https://tinyurl.com/3x96trkc','_blank')">Install</button>
+    </div>
+    <!-- (You can insert the rest of your Specialzyy Hub items here exactly as before) -->
   </div>
 </div>
 
-<h2>DNS Profiles</h2>
-<div class="tool-list">
-  <div class="tool-item">
-    <span>Khoindvn DNS</span>
-    <button class="btn" onclick="window.open('https://tinyurl.com/2va72xs2','_blank')">Download</button>
-  </div>
-  <div class="tool-item">
-    <span>Coolzyy DNS</span>
-    <button class="btn" onclick="window.open('https://www.mediafire.com/file/4l9jwf4i2h03qfv/Coolzyy_DNS_For_Sideloading.mobileconfig/file','_blank')">Download</button>
-  </div>
-  <div class="tool-item">
-    <span>NezusDNS</span>
-    <button class="btn" onclick="window.open('https://www.mediafire.com/file/e9op5yp7cwq8clo/NezusDNS_V2_IOS_18.mobileconfig/file','_blank')">Download</button>
-  </div>
-</div>
+<!-- Switch Button -->
+<button class="switch-btn" onclick="toggleView()">Switch to Specialzyy</button>
 
-<h2>Certificates</h2>
-<div class="tool-list">
-  <div class="tool-item">
-    <span>Install Cert</span>
-    <button class="btn" onclick="window.open('https://github.com/esigncert/khoindvn/raw/refs/heads/main/document/DNS/Certs-Khoindvn.zip','_blank')">Install</button>
-  </div>
-  <div class="tool-item">
-    <span>Download ZIP</span>
-    <button class="btn" onclick="window.open('https://github.com/esigncert/khoindvn/raw/refs/heads/main/document/DNS/Certs-Khoindvn.zip','_blank')">Download</button>
-  </div>
-</div>
+<script>
+  let showingCoolzyy = true;
+  function toggleView() {
+    const coolzyy = document.getElementById('coolzyy');
+    const specialzyy = document.getElementById('specialzyy');
+    const btn = document.querySelector('.switch-btn');
+    showingCoolzyy = !showingCoolzyy;
+    if (showingCoolzyy) {
+      coolzyy.style.display = 'block';
+      specialzyy.style.display = 'none';
+      document.body.style.background = '#b22222';
+      btn.textContent = 'Switch to Specialzyy';
+    } else {
+      coolzyy.style.display = 'none';
+      specialzyy.style.display = 'block';
+      document.body.style.background = '#121212';
+      btn.textContent = 'Switch to Coolzyy';
+    }
+  }
+</script>
 
 </body>
 </html>
