--- a/index.html
+++ b/index.html
@@ -164,64 +164,47 @@
 <div id="specialzyy">
   <h1>Specialzyy Hub</h1>
 
-  <section>
-    <h2>Buy Cert</h2>
-    <ul class="tool-list">
-      <li><a href="https://flekstore.com/curseCoolDrop" target="_blank">Buy Certificate - FlekStore</a></li>
-    </ul>
-  </section>
+  <h2>Direct Install</h2>
+  <div class="tool-list">
+    <div class="tool-item">
+      <span>Delta Installer</span>
+      <button class="btn" onclick="window.open('itms-services://?action=download-manifest&url=https%3A%2F%2Fdeltaios-executor.com%2FInstall21.plist','_blank')">Install</button>
+    </div>
+    <div class="tool-item">
+      <span>Delta Roblox Signed</span>
+      <button class="btn" onclick="window.open('https://tinyurl.com/deltarobloxsigned','_blank')">Install</button>
+    </div>
+    <div class="tool-item">
+      <span>KRNL Executor</span>
+      <button class="btn" onclick="window.open('itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/brawlmodlol/Signed-IPA/refs/heads/main/krnl.plist','_blank')">Install</button>
+    </div>
+    <div class="tool-item">
+      <span>Troll Installer 1</span>
+      <button class="btn" onclick="window.open('itms-services://?action=download-manifest&url=https://apps-signer.nabzclan.vip/en/uWWU39ng6WFIoTs/ota','_blank')">Install</button>
+    </div>
+    <div class="tool-item">
+      <span>Troll Installer 2</span>
+      <button class="btn" onclick="window.open('itms-services://?action=download-manifest&url=https://apps-signer.nabzclan.vip/en/aUvSOa9dPfXApm6/ota','_blank')">Install</button>
+    </div>
+  </div>
 
-  <section>
-    <h2>Direct Install</h2>
-    <ul class="tool-list">
-      <li>Delta Installer: <a href="itms-services://?action=download-manifest&url=https%3A%2F%2Fdeltaios-executor.com%2FInstall21.plist">Install via Manifest</a></li>
-      <li>Delta Roblox Signed: <a href="https://tinyurl.com/deltarobloxsigned" target="_blank">Download Link</a></li>
-      <li>KRNL Executor: <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/brawlmodlol/Signed-IPA/refs/heads/main/krnl.plist">Install via Manifest</a></li>
-      <li>Troll Installer 1: <a href="itms-services://?action=download-manifest&url=https://apps-signer.nabzclan.vip/en/uWWU39ng6WFIoTs/ota">Install via Manifest</a></li>
-      <li>Troll Installer 2: <a href="itms-services://?action=download-manifest&url=https://apps-signer.nabzclan.vip/en/aUvSOa9dPfXApm6/ota">Install via Manifest</a></li>
-    </ul>
-  </section>
+  <h2>Signer Links</h2>
+  <div class="tool-list">
+    <div class="tool-item">
+      <span>Scarlet BMW 2</span>
+      <button class="btn" onclick="window.open('itms-services://?action=download-manifest&url=https://applejr.cloud/manual/ScarletAlpha2_install.plist','_blank')">Install</button>
+    </div>
+    <div class="tool-item">
+      <span>Scarlet BMW 1</span>
+      <button class="btn" onclick="window.open('itms-services://?action=download-manifest&url=https://applejr.cloud/manual/ScarletAlpha_install.plist','_blank')">Install</button>
+    </div>
+  </div>
 
-  <section>
-    <h2>Signer Links</h2>
-    <ul class="tool-list">
-      <li>Scarlet BMW Alpha 2: <a href="itms-services://?action=download-manifest&url=https://applejr.cloud/manual/ScarletAlpha2_install.plist">Install</a></li>
-      <li>Scarlet BMW Alpha 1: <a href="itms-services://?action=download-manifest&url=https://applejr.cloud/manual/ScarletAlpha_install.plist">Install</a></li>
-    </ul>
-  </section>
-
-  <section>
-    <h2>IPA Section</h2>
-    <ul class="tool-list">
-      <li>Delta IPA: <a href="https://www.mediafire.com/file/xvikdomjke1dl13/Delta-2.685.ipa/file" target="_blank">Download IPA</a></li>
-    </ul>
-  </section>
-
+  <h2>IPA Section</h2>
+  <div class="tool-list">
+    <div class="tool-item">
+      <span>Delta IPA</span>
+      <button class="btn" onclick="window.open('https://www.mediafire.com/file/xvikdomjke1dl13/Delta-2.685.ipa/file','_blank')">Install</button>
+    </div>
+  </div>
 </div>
-
-<!-- Switch Button -->
-<button class="switch-btn" onclick="toggleView()">Switch to Specialzyy</button>
-
-<script>
-  let showingCoolzyy = true;
-  function toggleView() {
-    const coolzyy = document.getElementById('coolzyy');
-    const specialzyy = document.getElementById('specialzyy');
-    const btn = document.querySelector('.switch-btn');
-    showingCoolzyy = !showingCoolzyy;
-    if (showingCoolzyy) {
-      coolzyy.style.display = 'block';
-      specialzyy.style.display = 'none';
-      document.body.style.background = '#b22222';
-      btn.textContent = 'Switch to Specialzyy';
-    } else {
-      coolzyy.style.display = 'none';
-      specialzyy.style.display = 'block';
-      document.body.style.background = '#121212';
-      btn.textContent = 'Switch to Coolzyy';
-    }
-  }
-</script>
-
-</body>
-</html>
