--- a/index.html
+++ b/index.html
@@ -64,10 +64,6 @@
     background: #121212;
     color: #e0e0e0;
     padding: 20px;
-    max-width: 600px;
-    margin: 20px auto;
-    border-radius: 12px;
-    box-shadow: 0 6px 15px rgba(0,0,0,0.7);
   }
   #specialzyy h1 {
     text-align: center;
@@ -81,23 +77,25 @@
     border-bottom: 2px solid #7f53ff;
     padding-bottom: 6px;
   }
-  ul.tool-list {
-    list-style: none;
-    padding: 0;
+  .tool-list {
+    max-width: 600px;
+    margin: 0 auto 40px;
   }
-  ul.tool-list li {
-    margin-bottom: 12px;
+  .tool-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 12px 10px;
+    border-bottom: 1px solid #333;
   }
   .btn {
     background: #7f53ff;
     border: none;
-    padding: 6px 12px;
+    padding: 8px 16px;
     color: white;
     border-radius: 6px;
     cursor: pointer;
     font-weight: 600;
-    margin-left: 8px;
-    font-size: 0.9rem;
   }
   .btn:hover {
     background: #5c3ea6;
@@ -208,3 +206,13 @@
     </div>
   </div>
 </div>
+
+<!-- Switch Button -->
+<button class="switch-btn" onclick="toggleView()">Switch to Specialzyy</button>
+
+<script>
+  let showingCoolzyy = true;
+  function toggleView() {
+    const coolzyy = document.getElementById('coolzyy');
+    const specialzyy = document.getElementById('specialzyy');
+   
